--- a/Index.html
+++ b/Index.html
@@ -1,29 +1,35 @@
 <html>
 <head>
 <title>TY CSE ADCET</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
-<body>
+<body bgcolor="#F8F2F2">
     <style>
-    div{
-  color: black;
-  margin: 3px;
-  font-size: 1em font-weight: bolder
-}
+        .footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 15%;
+  background-color:#172337;
+  }
 </style>
 <p>
     &nbsp;
-<h4 align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</h4> </font>
-<h4 align = "center"><a href="Timetable_A.html" target="_self"><font face="Lobster" color="black"> Division A</a></h4></font>
-<h4 align = "center"><a href="Timetable_B.html" target="_self"> <font face="Lobster" color="black"> Division B</a></h4></font>
+<p align = "center"> <font face="Lobster" color="black">SELECT YOUR DIVISION</p> </font>
+<p align = "center"><a href="Timetable_A.html" target="_self"><font face="Lobster" color="black"> Division A</a></p></font>
+<p align = "center"><a href="Timetable_B.html" target="_self"> <font face="Lobster" color="black"> Division B</a></p></font>
+<p>&nbsp;</p><p>&nbsp;</p> 
+    <p>&nbsp;</p><p>&nbsp;</p> 
 </p>
-   <div>
-<h5 style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="blue">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="blue">ShivamNimbalkar</font></a></h5>
-<h5 style=" position: absolute; bottom: 0px; right: 10px;">© All Rights Reserved</h5> </font>
+   <div  class="footer">
+    <p>&nbsp;</p><p>&nbsp;</p> 
+    <p>&nbsp;</p><p>&nbsp;</p> 
+    <p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="-1">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="D6D6D6" size="-1">ShivamNimbalkar</font></a></p>
+    <p style=" position: absolute;bottom: 1px; right: 130px;"> © All Rights Reserved</p> </font>
     <p>
-        <h4 style="position: absolute;bottom: 25px;left: 1px;">Follow us on :</h4>  
-        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 45px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 90px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 135px;"> 
-        </p>
+        <p style="position: absolute;bottom: 25px;left: 1px;"><font face="Lobster" color="#D6D6D6" size="-1">Follow us on :</font></p>
+        <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 45px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 90px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 135px;" > 
+    </p>
 
    </div>
 </body>
