--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -3,7 +3,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
-<body bgcolor="white">
+<body bgcolor="#F8F2F2">
+    <style>
+        .footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 11%;
+  background-color:#172337;
+  }
+</style>
     <p>&nbsp;</p>
 <h3 align="center">TY Time-Table 2021 Sem V</h3>
 <h4 align="center"> Div - A </h4>
@@ -23,12 +33,14 @@
 <p>&nbsp;</p><p>&nbsp;</p> 
 <p>&nbsp;</p><p>&nbsp;</p> 
 -->
-<h5 style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="blue">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="blue">ShivamNimbalkar</font></a></h5>
-<h5 style=" position: absolute;bottom: 1px; right: 145px;">© All Rights Reserved</h5> </font>
+<div class="footer">
+<p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="3">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="#D6D6D6"size="3">ShivamNimbalkar</font></a></p></font>
+<p style=" position: absolute;bottom: 1px; right: 160px;"><font face="Lobster" color="#D6D6D6"size="3">© All Rights Reserved</p> </font>
 <p>
-    <h4 style="position: absolute;bottom: 25px;left: 1px;">Follow us on :</h4>
-    <a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 45px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 90px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 135px;" > 
+<p style="position: absolute;bottom: 35px;left: 1px;"><font face="Lobster" color="#D6D6D6">Follow us on :</p></font>
+<a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 47px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 93px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 138px;" > 
 </p>
+</div>
 </body>
 
 </html>
