--- a/Timetable_A.html
+++ b/Timetable_A.html
@@ -9,11 +9,11 @@
     width:100%;
     min-width:1000px;
     height:auto;
-}
-        body{
+     }
+    body{
             background-color:#F8F2F2;
         }
-        table {
+    table {
             background-color: rgb(255, 255, 255);
         }
         .footer {
@@ -33,10 +33,10 @@
 <table border=1 cellspacing="1" cellpadding="10" align = "center"  border color="black" >
 <p>&nbsp;</p>
 <tr align ="center"><td>Time </td><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
-<tr align ="center"><td>9:15 - 10:15 </td><td> <a href=""target="_blank"><font  color="Black">APC</font></a></td> <td> <a href=""target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="" target="_blank"><font  color="Black">APC</font></a></td> <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href=""target="_blank"><font  color="Black">AP</font></a></td></font><td rowspan="2"> <a href=""target="_blank"><font  color="Black">T3 SPC <br> T4 SPC </font></a></td></font>    
-<tr align ="center"><td>10:15 - 11:15 </td><td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href=""target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href=""target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href=""target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td>
-<tr align ="center"><td>11:30 - 12:30 </td><td> <a href=""target="_blank"><font  color="Black">WP</font></a></td> <td> <a href=""target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href=""target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> </td> <td> <a href=""target="_blank"><font  color="Black">Technical Writting</font></a></td> <td rowspan="2"> <a href=""target="_blank"><font  color="Black">Mini-Project</font></a></td>     
-<tr align ="center" ><td>12:30 - 13:30 </td><td> <a href=""target="_blank"><font  color="Black">AP</font></a></td> <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td><td> <a href=""target="_blank"><font  color="Black">Cyber Security</font></a></td> <td> <a href=""target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href=""target="_blank"><font  color="Black">WP</font></a></td>  
+<tr align ="center"><td>9:15 - 10:15 </td><td> <a href=""target="_blank"><font  color="Black">OE</font></a></td> <td> <a href=""target="_blank"><font  color="Black">OE</font></a></td> <td> <a href="" target="_blank"><font  color="Black">OE</font></a></td> <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href=""target="_blank"><font  color="Black">AP</font></a></td></font><td rowspan="2"> <a href=""target="_blank"><font  color="Black">T3 SPC <br> T4 SPC </font></a></td></font>    
+<tr align ="center"><td>10:15 - 11:15 </td><td> <a href="https://bit.lyspcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/daa2021"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/daa2021"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black"> Cyber Security</font></a><br> ADHOC <br> Storage Networks </td>
+<tr align ="center"><td>11:30 - 12:30 </td><td> <a href=""target="_blank"><font  color="Black">WP</font></a></td> <td> <a href=""target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/IoT_Wed"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> <br> ADHOC <br> Storage Networks </td> <td> <a href=""target="_blank"><font  color="Black">Technical Writting</font></a></td> <td rowspan="2"> <a href=""target="_blank"><font  color="Black">Mini-Project</font></a></td>     
+<tr align ="center" ><td>12:30 - 13:30 </td><td> <a href=""target="_blank"><font  color="Black">AP</font></a></td> <td> <a href=""target="_blank"><font  color="Black">SPC</font></a></td><td> <a href=""target="_blank"><font  color="Black">Cyber Security</font></a><br> ADHOC <br> Storage Networks </td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href=""target="_blank"><font  color="Black">WP</font></a></td>  
 <tr align ="center" ><td>14:15 - 16:15 </td><td> <a href=""target="_blank"><font  color="Black">T1 DAA <br>T2 WP<br>T3 AP<br>T4 TW </font></a></td> <td> <a href=""target="_blank"><font  color="Black">T1 AP <br> T2 DAA <br>T3 TW <br>T4 WP</font></a></td> <td> <a href=""target="_blank"><font  color="Black">T1 SPC <br> T2 AP</font> </a></td> <td> <a href=""target="_blank"><font  color="Black">T1 TW(14:15) <br>T2 TW(15:15) <br> T4 AP <br>T3 DAA </font></a></td><td> <a href=""target="_blank"><font  color="Black">T1 WP <br>T2  SPC <br>T3 WP<br> T4 DAA </font></a></td> <td><font  color="Black">-</font></td>
 </font>
 </table>
@@ -50,9 +50,10 @@
 <p style=" position: absolute;bottom: 1px; right: 160px;"><font face="Lobster" color="#D6D6D6"size="3">© All Rights Reserved</p> </font>
 <p>
 <p style="position: absolute;bottom: 35px;left: 1px;"><font face="Lobster" color="#D6D6D6">Follow us on :</p></font>
-<a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 47px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 93px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 138px;" > 
+<a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 48px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 95px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 142px;"></a> 
 </p>
 </div>
+<p align = "center">Note: All the lecture links are provided by valid sources but may vary depending if new links are created or updated.</p>
 </body>
 
 </html>
