--- a/Timetable_B.html
+++ b/Timetable_B.html
@@ -1,9 +1,16 @@
 <html>
 <head> <title> TY Time-Table 2021 Division B </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
-<body bgcolor="#F8F2F2">
+
     <style>
+         body{
+            background-color: #F8F2F2;
+        }
+    table {
+            background-color: rgb(255, 255, 255);
+        }
         .footer {
   position: fixed;
   left: 0;
@@ -11,8 +18,9 @@
   width: 100%;
   height: 11%;
   background-color:#172337;
-  }
+ }
 </style>
+<body class="WebContainer">
     <p>&nbsp;</p>
     <h3 align="center">TY Time-Table 2021 Sem V</h3>
     <h4 align="center"> Div - B </h4>
@@ -20,11 +28,11 @@
 
 <p>&nbsp;</p>
 <tr align ="center"><td>Time </td><td>MONDAY</td> <td>TUESDAY</td> <td>WEDNESDAY</td> <td>THURSDAY</td> <td>FRIDAY</td> <td>SATURDAY</td></tr>
-<tr align ="center"><td>9:15 - 10:15 </td><td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a></td></font> <td rowspan="2"><a href=""target="_blank"><font  color="Black"> T5 DAA  <br>  T6 AP </font></a></td></font>   
+<tr align ="center"><td>9:15 - 10:15 </td><td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/3egnjlY"target="_blank"><font  color="Black">APC</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a><br>AP</td></font> <td rowspan="2"><a href=""target="_blank"><font  color="Black"> T5 DAA  <br>  T6 AP </font></a></td></font>   
 <tr align ="center"><td>10:15 - 11:15 </td><td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td> <td> <a href="https://bit.ly/IoT_Tues"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/3hCOREA"target="_blank"><font  color="Black">Cyber Security</font></a></td>
 <tr align ="center"><td>11:30 - 12:30 </td><td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> <td> <a href="https://bit.ly/DAA_TY_B"target="_blank"><font  color="Black">DAA</font></a></td> <td> <a href="https://bit.ly/IoT_Wed"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/3kdN5eI"target="_blank"><font  color="Black">Cyber Security</font></a> </td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP</font></a></td> <td rowspan="2"> <a href=""target="_blank"><font  color="Black">Mini-Project</font></a></td>     
-<tr align ="center" ><td>12:30 - 13:30 </td><td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a></td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td><td> <a href="https://bit.ly/3k9oDLr"target="_blank"><font  color="Black">Cyber Security</font></a></td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">Technical Writting</font></a></td>  
-<tr align ="center" ><td>14:15 - 16:15 </td><td> <a href=""target="_blank"><font  color="Black">SPC T8</font></a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> <td> <a href="https://bit.ly/3xEsZOl"target="_blank"><font  color="Black">CGMT LAB</font></a></td><td> <a href=""target="_blank"><font  color="Black">TW(T)</font></a></td> <td><font  color="Black">-</font></td>
+<tr align ="center" ><td>12:30 - 13:30 </td><td> <a href="https://bit.ly/3AYKr2d"target="_blank"><font  color="Black">CGMT</font></a><br>AP</td> <td> <a href="https://bit.ly/spcty2021"target="_blank"><font  color="Black">SPC</font></a></td><td> <a href="https://bit.ly/3k9oDLr"target="_blank"><font  color="Black">Cyber Security</font></a></td> <td> <a href="https://bit.ly/IoT_Thurs"target="_blank"><font  color="Black">IoT</font></a></td> <td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">Technical Writting</font></a></td>  
+<tr align ="center" ><td>14:15 - 16:15 </td><td> <a href=""target="_blank"><font  color="Black">SPC T8</font></a></td> <td> <a href="https://bit.ly/wpty2021"target="_blank"><font  color="Black">WP LAB T8</font></a></td> <td> <a href="https://bit.ly/DAA_LAB_TYB"target="_blank"><font  color="Black">DAA LAB T8</font> </a></td> <td> <a href="https://bit.ly/3xEsZOl"target="_blank"><font  color="Black">CGMT LAB</font></a></td><td> <a href="https://bit.ly/TY_Technical_Writing"target="_blank"><font  color="Black">TW(T)</font></a></td> <td><font  color="Black">-</font></td>
 </font>
 </table>
 
@@ -35,10 +43,11 @@
 <p style=" position: absolute;bottom: 20px; right: 10px;"><font face="Lobster" color="#D6D6D6"size="3">Designed & Maintained by <a href="https://cutt.ly/vm31hcz"target="_blank"><font face="Lobster" color="#D6D6D6"size="3">ShivamNimbalkar</font></a></p></font>
 <p style=" position: absolute;bottom: 1px; right: 160px;"><font face="Lobster" color="#D6D6D6"size="3">© All Rights Reserved</p> </font>
 <p>
-<p style="position: absolute;bottom: 32px;left: 1px;"><font face="Lobster" color="#D6D6D6">Follow us on :</p></font>
-<a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 0px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 47px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 93px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 138px;" > 
+<p style="position: absolute;bottom: 35px;left: 1px;"><font face="Lobster" color="#D6D6D6">Follow us on :</p></font>
+<a href="https://www.instagram.com/shivam_3901_/" target="_blank" ><img src="Insta.png" width="3%"style="position: absolute;bottom: 5px;left: 1px;"><a href="mailto: shivamnimbalkar3901@gmail.com" target="_blank" ><img src="email.png" width="3%" style="position: absolute;bottom: 5px;left: 49px;"><a href="https://www.facebook.com/ShivamNimbalkar3901/" target="_blank" ><img src="Facebook.png" width="3%" style="position: absolute;bottom: 5px;left: 95px;"><a href="https://cutt.ly/vm31hcz" target="_blank" ><img src="Linkedin.png" width="3%" style="position: absolute;bottom: 5px; left: 142px;"></a> 
 </p>
 </div>
+<p align="center">Note: All the lecture links are provided by valid sources but may vary depending if new links are created or updated.</p>
 </body>
 
 </html>
